// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`работа MobileCompany 1`] = `
<div
  className="MobileCompany"
>
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Blocked"
  />
  <br />
  <br />
  <table
    className="AllTable"
  >
    <thead
      className="Title"
    >
      <tr>
        <th>
          Surname
        </th>
        <th>
          Name
        </th>
        <th>
          Middle name
        </th>
        <th>
          Balance
        </th>
        <th>
          Status
        </th>
        <th>
          Edit
        </th>
        <th>
          Delete
        </th>
      </tr>
    </thead>
    <tbody
      className="Table"
    >
      <tr>
        <td>
          Ivanov
        </td>
        <td>
          Ivan
        </td>
        <td>
          Ivanovich
        </td>
        <td>
          200
        </td>
        <td
          className="ActiveClient"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Edit"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Delete"
          />
        </td>
      </tr>
      <tr>
        <td>
          Sidorov
        </td>
        <td>
          Sidor
        </td>
        <td>
          Sidorovich
        </td>
        <td>
          250
        </td>
        <td
          className="ActiveClient"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Edit"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Delete"
          />
        </td>
      </tr>
      <tr>
        <td>
          Petrov
        </td>
        <td>
          Petr
        </td>
        <td>
          Petrovich
        </td>
        <td>
          180
        </td>
        <td
          className="ActiveClient"
        >
          active
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Edit"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Delete"
          />
        </td>
      </tr>
      <tr>
        <td>
          Grigoriev
        </td>
        <td>
          Grigoriy
        </td>
        <td>
          Grigorievich
        </td>
        <td>
          -220
        </td>
        <td
          className="BlockedClient"
        >
          blocked
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Edit"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Delete"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    onClick={[Function]}
    type="button"
    value="Add new client"
  />
</div>
`;

exports[`работа MobileCompany 2`] = `
<div
  className="MobileCompany"
>
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Blocked"
  />
  <br />
  <br />
  <table
    className="AllTable"
  >
    <thead
      className="Title"
    >
      <tr>
        <th>
          Surname
        </th>
        <th>
          Name
        </th>
        <th>
          Middle name
        </th>
        <th>
          Balance
        </th>
        <th>
          Status
        </th>
        <th>
          Edit
        </th>
        <th>
          Delete
        </th>
      </tr>
    </thead>
    <tbody
      className="Table"
    >
      <tr>
        <td>
          Grigoriev
        </td>
        <td>
          Grigoriy
        </td>
        <td>
          Grigorievich
        </td>
        <td>
          -220
        </td>
        <td
          className="BlockedClient"
        >
          blocked
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Edit"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Delete"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    onClick={[Function]}
    type="button"
    value="Add new client"
  />
  <div
    className="EditAdd"
  >
    <span>
      ID: 
    </span>
    <span>
      6
    </span>
    <br />
    <span>
      Surname: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <span>
      Name: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <span>
      Middle name: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <span>
      Balance: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <input
      onClick={[Function]}
      type="button"
      value="Save"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Cancel"
    />
  </div>
</div>
`;

exports[`работа MobileCompany 3`] = `
<div
  className="MobileCompany"
>
  <input
    onClick={[Function]}
    type="button"
    value="All"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Active"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Blocked"
  />
  <br />
  <br />
  <table
    className="AllTable"
  >
    <thead
      className="Title"
    >
      <tr>
        <th>
          Surname
        </th>
        <th>
          Name
        </th>
        <th>
          Middle name
        </th>
        <th>
          Balance
        </th>
        <th>
          Status
        </th>
        <th>
          Edit
        </th>
        <th>
          Delete
        </th>
      </tr>
    </thead>
    <tbody
      className="Table"
    >
      <tr>
        <td>
          Grigoriev
        </td>
        <td>
          Grigoriy
        </td>
        <td>
          Grigorievich
        </td>
        <td>
          -220
        </td>
        <td
          className="BlockedClient"
        >
          blocked
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Edit"
          />
        </td>
        <td>
          <input
            onClick={[Function]}
            type="button"
            value="Delete"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <br />
  <input
    onClick={[Function]}
    type="button"
    value="Add new client"
  />
  <div
    className="EditAdd"
  >
    <span>
      ID: 
    </span>
    <span>
      6
    </span>
    <br />
    <span>
      Surname: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <span>
      Name: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <span>
      Middle name: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <span>
      Balance: 
    </span>
    <input
      defaultValue=""
      type="text"
    />
    <br />
    <input
      onClick={[Function]}
      type="button"
      value="Save"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Cancel"
    />
  </div>
</div>
`;
